# clockwise

./: README.md  clockwise.py  pyproject.toml  setup.py
clockwise/: __init__.py  clockwise.py  interface.py  io.py
