[build-system]
build-backend = "setuptools.build_meta" # If not defined, then legacy behavior can happen.
requires = ["setuptools"] # REQUIRED if [build-system] table is used  

[project]
name = "clockwise"
requires-python = ">=3.0"
version = "1.0.3"

description = "A simple timing library for Python"
readme = "README.md"

authors = [{name = "Simon Schaefer", email = "simon.k.schaefer@gmail.com"}]
license = {file = "LICENSE.txt"}
maintainers = [{name = "Simon Schaefer", email = "simon.k.schaefer@gmail.com"}]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
]
keywords = ["profiling"]
